--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.191",
+    "lodash": "^4.17.21",
     "vitest": "^0.28.5",
     "vue": "^3.2.45"
   },
